--- a/Food_website/src/styles/header.css
+++ b/Food_website/src/styles/header.css
@@ -31,6 +31,7 @@
   display: block;
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 
 .header__menu,
@@ -70,19 +71,19 @@
   bottom: -7px;
   width: 100%;
   height: 2px;
-  background-color: var(--orange);
+  background-color: rgb(225, 192, 230);
   transform: scaleX(0);
   transition: transform var(--short);
 }
 
 
 .header__menu-link:active {
-  color: var(--orange-dark);
+  color: rgb(225, 192, 230);
 }
 
 
 .header__menu-link:active::after {
-  background-color: var(--orange-dark);
+  background-color: rgb(225, 192, 230);
 }
 
 .header__search-btn {
@@ -94,13 +95,13 @@
 }
 
 .header__search-btn:active {
-  color: var(--orange-dark);
+  color: rgb(225, 192, 230);
 }
 
 
 @media (any-hover: hover) {
   .header__search-btn:hover:not(:active) {
-    color: var(--orange);
+    color: rgb(225, 192, 230);
     cursor: pointer;
   }
 
@@ -109,12 +110,12 @@
   }
 
   .header__menu-link:focus-visible:not(:active) {
-    outline: 2px solid var(--orange);
+    outline: 2px solid rgb(225, 192, 230);
     outline-offset: 5px;
   }
 
   .header__search-btn:focus-visible:not(:hover:not(:active)) {
-    outline: 2px solid var(--orange);
+    outline: 2px solid rgb(225, 192, 230);
     outline-offset: 5px;
   }
 }
@@ -170,7 +171,7 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 769px) {
   .main {
     padding-top: 20px;
   }
@@ -198,6 +199,10 @@
     gap: 25px;
     flex-wrap: nowrap;
     justify-content: space-between;
+  }
+
+  .header__menu-item:last-child {
+    margin-right: 10px;
   }
 }
 
